[gd_scene load_steps=6 format=2]

[ext_resource path="res://components/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/8bitOperatorPlus-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.733333, 0.0862745, 0, 0.588235, 0.152941, 0.576471, 0, 0.588235 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 20.0
margin_top = 1020.0
margin_right = 138.0
margin_bottom = 1063.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = 1540.0
margin_top = 1030.0
margin_right = 1900.0
margin_bottom = 1060.0
step = 0.01
value = 100.0
texture_progress = SubResource( 3 )
nine_patch_stretch = true

[node name="HealthTween" type="Tween" parent="."]

